--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- HTML Document -->
 
 <mat-toolbar>
-  <button mat-icon-button class="menu-button">
+  <button mat-icon-button class="menu-button" (click)="setEventSideBar()">
     <mat-icon>menu</mat-icon>
   </button>
   <img class="logo-qualiex" src="../assets/images/qualiex_logo_branco.png" alt="Logo-Qualiex">
