--- a/src/styles.css
+++ b/src/styles.css
@@ -119,3 +119,9 @@ mat-tab-header {
         display: none!important;
     }
 }
+
+@media screen and () {
+    .top-button {
+        display: none!important;
+    }
+}
