--- a/src/app/shared/bottom-sheet/create-plan/create-plan.component.html
+++ b/src/app/shared/bottom-sheet/create-plan/create-plan.component.html
@@ -53,7 +53,7 @@
       <mat-form-field class="example-full-width">
         <mat-label>Pertence ao plano</mat-label>
         <mat-select formControlName="parent">
-          <mat-option [value]=null>Nenhum</mat-option>
+          <mat-option [value]="null">Nenhum</mat-option>
           <mat-option *ngFor="let plan of plans" [value]="plan">
             {{plan.planName}}
           </mat-option>
