--- a/src/app/views/planner/components/plans/plans.component.html
+++ b/src/app/views/planner/components/plans/plans.component.html
@@ -93,7 +93,7 @@
           </div>
         </mat-expansion-panel-header>
 
-        <div class="internal-plans" id="plan.id" cdkDropList [cdkDropListData]="plan.childPlans" (cdkDropListDropped)="drop($event)" [cdkDropListConnectedTo]='this.planService.listCDK'>
+        <div class="internal-plans" id="{{plan.id}}" cdkDropList [cdkDropListData]="plan.childPlans" (cdkDropListDropped)="drop($event)" [cdkDropListConnectedTo]='this.planService.listCDK'>
           <div class="child-pane" cdkDrag [cdkDragData]="child" *ngFor="let child of plan.childPlans">
 
             <div class="info-plan">
