--- a/src/app/views/planner/components/plans/plans.component.css
+++ b/src/app/views/planner/components/plans/plans.component.css
@@ -57,8 +57,10 @@ mat-expansion-panel:hover {
 }
 
 .internal-plans {
-    margin-top: 10px;
-    min-height: 30px;
+    margin-top: 10px!important;
+    padding-top: 20px!important;
+    padding-bottom: 20px!important;
+    width: 100%!important;
     /* border-top: 2px solid rgba(0, 0, 0, 0.178); */
 }
 
