--- a/src/app/views/planner/components/plans/plans.component.html
+++ b/src/app/views/planner/components/plans/plans.component.html
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-        <span *ngIf="plan.childPlans === null" class="no-child">Sem sub-planos.</span>
+        <span *ngIf="!plan.childPlans.length>0" class="no-child">Sem sub-planos.</span>
       </mat-expansion-panel>
     </div>
   </div>
