--- a/src/app/views/planner/components/plans/plans.component.css
+++ b/src/app/views/planner/components/plans/plans.component.css
@@ -56,12 +56,29 @@ mat-expansion-panel:hover {
     font-weight: 500;
 }
 
+.cdk-drop-list-receiving {
+    border: 1px solid rgb(205, 205, 255);
+    border-radius: 5px;
+    min-height: 100%!important;
+    min-width: 100%!important;
+}
+
+.cdk-drop-list-receiving:hover {
+    background-color: rgba(0, 68, 255, 0.164);
+    border-radius: 10px;
+    min-height: 200px!important;
+}
+
+.cdk-drag-preview {
+    background-color: black;
+}
+
 .internal-plans {
+    min-height: 50px!important;
     margin-top: 10px!important;
-    padding-top: 20px!important;
-    padding-bottom: 20px!important;
+    padding-top: 10px!important;
+    padding-bottom: 10px!important;
     width: 100%!important;
-    /* border-top: 2px solid rgba(0, 0, 0, 0.178); */
 }
 
 .child-pane {
