update layout dialogs

--- a/src/app/shared/dialogs/confirm-create-plan-dialog/confirm-create-plan-dialog.component.html
+++ b/src/app/shared/dialogs/confirm-create-plan-dialog/confirm-create-plan-dialog.component.html
@@ -3,7 +3,9 @@
 <div class="dialog-container">
     <h3 auto-focus>Cadastrar plano?</h3>
 
-    <button mat-raised-button (click)="confirmPlanCreation()">Confirmar</button>
+    <section>
+        <button mat-raised-button class="main-button" (click)="confirmPlanCreation()">Confirmar</button>
 
-    <button mat-raised-button (click)="cancelPlanCreation()">Cancelar</button>
+        <button mat-raised-button class="secundary-button" (click)="cancelPlanCreation()">Cancelar</button>
+    </section>
 </div>
