--- a/src/app/shared/dialogs/sucess-create-plan-type-dialog/sucess-create-plan-type-dialog.component.html
+++ b/src/app/shared/dialogs/sucess-create-plan-type-dialog/sucess-create-plan-type-dialog.component.html
@@ -3,5 +3,7 @@
 <div class="dialog-container">
     <h3 auto-focus>Tipo de plano cadastrado com sucesso !</h3>
 
-    <button mat-raised-button (click)="okButton()">Ok</button>
+    <section>
+        <button mat-raised-button class="main-button" (click)="okButton()">Ok</button>
+    </section>
 </div>
